--- a/milestone3.html
+++ b/milestone3.html
@@ -3,20 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Milestone 3: Expert Systems</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Expert Systems</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1 class="milestone-text">Milestone 3: Expert Systems</h1>
-    </header>
-    <main>
+    <div class="header">
+        <h1 class="milestone">Expert Systems</h1>
+    </div>
+    <div class="main">
         <img src="expert_systems_image.jpg" alt="Expert Systems Image">
-        <p>Paragraph about Expert Systems.</p>
-    </main>
-    <footer>
-        Source: www.example.com
-    </footer>
-</body>
+        <p>The development of expert systems like MYCIN and DENDRAL marked a significant advancement in AI, enabling computers to mimic human decision-making.</p>
+    </div>
+    <div class="footer">
+        <p>Source: <a href="https://www.techspot.com/news/89405-proposed-eu-regulations-aim-restrict-ai-use-based.html">TechSpot</a></p>
+    </div>
+</body> <h2>Milestone Table:</h2>
+<table>
+    <tr>
+        <th><a href="turing_test.html">Turing Test</a></th>
+        <th><a href="birth_of_ai_research.html">Birth of AI Research</a></th>
+        <th><a href="expert_systems.html">Expert Systems</a></th>
+        <th><a href="deep_learning.html">Deep Learning</a></th>
+        <th><a href="alphagos_victory.html">AlphaGo's Victory</a></th>
+    </tr>
+</table>
 </html>
 
