--- a/milestone4.html
+++ b/milestone4.html
@@ -3,20 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Milestone 4: Deep Learning</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Deep Learning</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1 class="milestone-text">Milestone 4: Deep Learning</h1>
-    </header>
-    <main>
+    <div class="header">
+        <h1 class="milestone">Deep Learning</h1>
+    </div>
+    <div class="main">
         <img src="deep_learning_image.jpg" alt="Deep Learning Image">
-        <p>Paragraph about Deep Learning.</p>
-    </main>
-    <footer>
-        Source: www.example.com
-    </footer>
+        <p>The emergence of deep learning algorithms, such as neural networks, revolutionized AI by enabling machines to learn from data.</p>
+    </div>
+    <div class="footer">
+        <p>Source: <a href="https://www.researchgate.net/figure/Basic-construction-of-AI-system-Argility-2018_fig4_341757051">ResearchGate</a></p>
+    </div> <h2>Milestone Table:</h2>
+<table>
+    <tr>
+        <th><a href="turing_test.html">Turing Test</a></th>
+        <th><a href="birth_of_ai_research.html">Birth of AI Research</a></th>
+        <th><a href="expert_systems.html">Expert Systems</a></th>
+        <th><a href="deep_learning.html">Deep Learning</a></th>
+        <th><a href="alphagos_victory.html">AlphaGo's Victory</a></th>
+    </tr>
+</table>
+
 </body>
 </html>
 
