--- a/alphagos_victory.html
+++ b/alphagos_victory.html
@@ -24,6 +24,7 @@
         <th><a href="expert_systems.html">Expert Systems</a></th>
         <th><a href="deep_learning.html">Deep Learning</a></th>
         <th><a href="alphagos_victory.html">AlphaGo's Victory</a></th>
+        <th><a href="index.html">Home</a></th>
     </tr>
 </table>
 </body> 
