--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     </ul>
 
 
+    
     <h2>Milestone Table:</h2>
     <table>
         <tr>
@@ -70,7 +71,7 @@
             <td>AlphaGo defeats world champion Go player Lee Sedol, showcasing AI's strategic decision-making.</td>
             <td>2016</td>
         </tr>
-    </table><h2>Milestone Table:</h2>
+    </table>
 <table>
     <tr>
         <th><a href="turing_test.html">Turing Test</a></th>
