--- a/birth_of_ai_research.html
+++ b/birth_of_ai_research.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Home</a>
+        <a class="navbar-brand" href="index.html">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -43,7 +43,7 @@
         </div>
         <div class="row">
             <div class="col">
-                <img src="ai_research_image.jpg" alt="AI Research Image" class="img-fluid">
+                <img src="https://static.independent.co.uk/s3fs-public/styles/article_small/public/thumbnails/image/2011/10/31/20/48-John-McCarthy-AP.jpg" alt="AI Research Image" alt="AI Research Image" class="img-fluid">
             </div>
             <div class="col">
                 <p>The "Birth of AI Research" marks a pivotal moment in the history of technology and science, catalyzing the emergence of a field that would redefine human-machine interactions. It traces back to the 1956 Dartmouth Conference organized by computer scientist John McCarthy, who coined the term "artificial intelligence" (AI) and gathered a group of leading researchers to explore the potential of creating machines capable of intelligent behavior. This landmark event laid the foundation for AI research, sparking interdisciplinary collaboration among computer scientists, psychologists, mathematicians, and philosophers. The birth of AI research signified a paradigm shift in our understanding of computation and cognition, ushering in an era of innovation that continues to shape our world profoundly. Since then, AI has evolved from theoretical concepts to practical applications, revolutionizing industries, from healthcare and finance to transportation and entertainment. The birth of AI research represents not only a technological milestone but also a testament to human ingenuity and our relentless pursuit of understanding and replicating intelligence.
