--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </tbody>
     </table>
 
-    <table>
+    <table class="table">
         <tr>
             <th><a href="turing_test.html">Turing Test</a></th>
             <th><a href="birth_of_ai_research.html">Birth of AI Research</a></th>
